--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
--e hg+https://hg@bitbucket.org/ubernostrum/django-registration#egg=django-registration
+-e hg+https://hg@bitbucket.org/vanschelven/django-registration#egg=django-registration
 django-cms==2.1.4
 -e hg+https://bitbucket.org/jespern/django-piston@adeef486579b#egg=django-piston
 south
 django-sekizai
 django-appmedia
 django-contact-form
-django-haystack
+django-haystack==1.2
 xapian-haystack
 django==1.3.3
 PIL
 wsgiref==0.1.2
--e git://github.com/vanschelven/epidb-client-python.git#egg=epidb-client
--e git://github.com/ojii/django-nani.git#egg=django-nani
+-e git+https://github.com/vanschelven/epidb-client-python.git#egg=epidb-client
+-e git+https://github.com/ojii/django-nani.git@bb47153e05b46b775658887f214a486412fe25a5#egg=django-nani
 simplejson
 mock
-pybbm
+pybbm==0.8.0
