--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
--e hg+https://hg@bitbucket.org/vanschelven/django-registration#egg=django-registration
+Django==1.3.3
+Markdown==2.3.1
+PIL==1.1.7
+South==0.8.2
+argparse==1.2.1
+django-annoying==0.7.7
+django-appmedia==1.0.1
+django-classy-tags==0.4
 django-cms==2.1.4
--e hg+https://bitbucket.org/jespern/django-piston@adeef486579b#egg=django-piston
-south
-django-sekizai
-django-appmedia
-django-contact-form
-django-haystack==1.2
-xapian-haystack
-django==1.3.3
-PIL
-wsgiref==0.1.2
--e git+https://github.com/vanschelven/epidb-client-python.git#egg=epidb-client
--e git+https://github.com/ojii/django-nani.git@bb47153e05b46b775658887f214a486412fe25a5#egg=django-nani
-simplejson
-mock
+django-contact-form==1.0
+django-haystack==1.2.0
+-e git+https://github.com/ojii/django-nani.git@bb47153e05b46b775658887f214a486412fe25a5#egg=django_nani-dev
+django-pure-pagination==0.2.1
+django-sekizai==0.7
+django-simple-captcha==0.4.0
+html5lib==0.99
+mock==1.0.1
+postmarkup==1.2.0
+psycopg2==2.5.1
 pybbm==0.8.0
+pytils==0.2.3
+simplejson==3.3.1
+six==1.4.1
+sorl-thumbnail==11.12
+wsgiref==0.1.2
+xapian-haystack==1.1.5beta
+-e hg+https://hg@bitbucket.org/ubernostrum/django-registration#egg=django-registration
+-e hg+https://bitbucket.org/jespern/django-piston@adeef486579b#egg=django-piston
