completed the apache setup script, needs testing

--- a/scripts/halsorapport-ssl.conf
+++ b/scripts/halsorapport-ssl.conf
@@ -3,8 +3,6 @@
         <VirtualHost _default_:443>
                 ServerAdmin webmaster@localhost
 
-                DocumentRoot /var/www/html
-
                 ErrorLog ${APACHE_LOG_DIR}/error.log
                 CustomLog ${APACHE_LOG_DIR}/access.log combined
 
@@ -16,8 +14,8 @@
 
                 SSLEngine on
 
-                SSLCertificateFile      /etc/apache2/certificate/testhalsorapport.crt
-                SSLCertificateKeyFile   /etc/apache2/certificate/testhalsorapport.key
+                SSLCertificateFile /etc/apache2/certificate/testhalsorapport.crt
+                SSLCertificateKeyFile /etc/apache2/certificate/testhalsorapport.key
 
                 <FilesMatch "\.(cgi|shtml|phtml|php)$">
                                 SSLOptions +StdEnvVars
@@ -44,11 +42,13 @@
                         Require all granted
                 </Directory>
 
+
         ########################################################################
         # REDIRECT ALL #########################################################
         ########################################################################
 
-        ########################################################################
+        # Uncomment this block to make the site acessible only on our network
+        # This can be used to put the site down for the useres while safely applying fixes live
 
         #RewriteEngine On
         #RewriteCond %{REMOTE_ADDR} !^10\.100\.(.+)\.(.+)$
