changed apache configuration setup, ssl is offloaded to proxy and no longer our concern

--- a/scripts/halsorapport.conf
+++ b/scripts/halsorapport.conf
@@ -1,9 +1,48 @@
+WSGIPythonHome /var/www/hrpt
 <VirtualHost *:80>
-        ServerName www.halsorapportdev-srv1.fohmdev.local
-        ServerAlias halsorapportdev-srv1.fohmdev.local
 
-        RewriteEngine On
-        RewriteRule     ^/(.*)  https://www.halsorapportdev-srv2.fohmdev.local/$1 [NC,R,L]
+        #TODO: pass the hostname as a parameter to the script and then replace here
+        ServerName halsorapportdev-srv1.fohmdev.local
+        ServerAlias www.halsorapportdev-srv1.fohmdev.local
+
+        Alias /media/ /var/www/hrpt/media/
+
+        WSGIScriptAlias / /var/www/hrpt/wsgi.py
+
+        <Directory "/var/www/hrpt">
+                Order allow,deny
+                Allow from all
+                Require all granted
+        </Directory>
+
+        <Directory /var/www/hrpt/media">
+                # directives to effect the static directory
+                Options +Indexes
+                Order allow,deny
+                Allow from all
+                Require all granted
+        </Directory>
+
+        <Location /admin>
+                Order deny,allow
+                Deny from all
+                Allow from 127.0.0.0/8 ::1/128 10.100.0.0/16 172.25.0.0/16
+        </Location>
+
+        ########################################################################
+        # REDIRECT ALL #########################################################
+        ########################################################################
+
+        #RewriteEngine On
+        #RewriteCond %{REMOTE_ADDR} !^10\.100\.(.+)\.(.+)$
+        #RewriteCond %{REMOTE_ADDR} !=172.20.0.40
+        #RewriteCond %{REMOTE_ADDR} !=172.20.0.47
+        #RewriteRule ^/.* http://www.folkhalsomyndigheten.se/amnesomraden/beredskap/overvakning-och-rapportering/syndromovervakning/halsorapport/ [R]
+
+        ########################################################################
+        # END OF REDIRECT ALL ##################################################
+        ########################################################################
+
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
