--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,6 @@ simplejson==3.3.1
 six==1.4.1
 sorl-thumbnail==11.12
 wsgiref==0.1.2
-django-registration=0.8
+django-registration==0.8
 -e hg+https://bitbucket.org/jespern/django-piston@adeef486579b#egg=django-piston
 -e git+https://github.com/pfhm/epidb-client-python.git#egg=epidb-client
