--- a/scripts/send_queued_emails.conf
+++ b/scripts/send_queued_emails.conf
@@ -1,5 +1,6 @@
 description "Send emails queued manually in the halsoraport admin"
 author "Pedro"
 start on runlevel [2345]
+respawn
 
 exec /var/www/hrpt/bin/python /var/www/hrpt/manage.py send_queued_emails
